erDiagram
    USERS ||--o{ ACCOUNTS : "has"
    USERS ||--o{ CATEGORIES : "creates"
    USERS ||--o{ TRANSACTIONS : "makes"
    ACCOUNTS ||--o{ TRANSACTIONS : "funds"
    CATEGORIES ||--o{ TRANSACTIONS : "classifies"

    USERS {
        UUID id PK
        VARCHAR email
        VARCHAR hashed_password
        VARCHAR full_name
        BOOLEAN is_active
        TIMESTAMP created_at
        TIMESTAMP updated_at
        TIMESTAMP deleted_at
    }
    ACCOUNTS {
        UUID id PK
        VARCHAR name
        VARCHAR type
        NUMERIC balance
        UUID user_id FK
        TIMESTAMP created_at
        TIMESTAMP updated_at
        TIMESTAMP deleted_at
    }
    CATEGORIES {
        UUID id PK
        VARCHAR name
        VARCHAR type
        VARCHAR icon
        VARCHAR color
        UUID user_id FK
        TIMESTAMP created_at
        TIMESTAMP updated_at
        TIMESTAMP deleted_at
    }
    TRANSACTIONS {
        UUID id PK
        NUMERIC amount
        VARCHAR type
        TIMESTAMP date
        TEXT note
        UUID user_id FK
        UUID account_id FK
        UUID category_id FK
        TIMESTAMP created_at
        TIMESTAMP updated_at
        TIMESTAMP deleted_at
    }